--- a/html5/index.html
+++ b/html5/index.html
@@ -43,9 +43,9 @@
 </header>
 <main>
     <div class="container-fluid"
-         style=" background-image:url('./images/robotron-kantine_893x664px_96dpi.png'); background-origin: border-box;background-repeat:no-repeat;background-size:contain;background-position:bottom right;background-color: white;background-blend-mode: lighten;opacity: 0.5;">
+         style=" background-image:url('./images/robotron-kantine_893x664px_96dpi.png'); background-origin: border-box;background-repeat:no-repeat;background-size:contain;background-position:bottom right;background-color: white;opacity: 0.7;">
         <div class="row min-vh-100"
-             style="background-image:url('./images/final_023_plakat_portrait_509x1080.jpg'); background-origin: border-box;background-repeat:no-repeat;background-size:contain;background-position: top left;background-blend-mode: overlay;opacity: 1;/*background-position-y:0;background-position-x: 4rem;*/">
+             style="background-image:url('./images/final_023_plakat_portrait_509x1080.jpg'); background-origin: border-box;background-repeat:no-repeat;background-size:contain;background-position: top left;background-color: white;opacity: 1;/*background-position-y:0;background-position-x: 4rem;*/">
             <div class="d-flex col start min-vh-100"></div>
             <div class="d-flex col end min-vh-100"
                  style="padding-right:5rem;">
