--- a/html5/index.html
+++ b/html5/index.html
@@ -43,20 +43,27 @@
 </header>
 <main>
     <div class="container-fluid"
-         style=" background-image:url('./images/robotron-kantine_893x664px_96dpi.png'); background-origin: border-box;background-repeat:no-repeat;background-size:contain;background-position:bottom right;background-color: white;opacity: 0.7;">
+         style="background-image:url('./images/robotron-kantine_893x664px_96dpi.png');
+         background-origin: border-box;
+         background-repeat:no-repeat;
+         background-size:contain;
+         background-position:bottom right;
+         background-color: white;
+         opacity: 0.6;
+         padding-left: 0;">
         <div class="row min-vh-100"
              style="/*background-image:url('./images/final_023_plakat_portrait_509x1080.jpg'); background-origin: border-box;background-repeat:no-repeat;background-size:contain;background-position: top left;background-color: white;opacity: 1;/*background-position-y:0;background-position-x: 4rem;*/">
             <div class="d-flex col start min-vh-100">
                 <img src="./images/final_023_plakat_portrait_509x1080.jpg" alt="final_023_plakat_portrait_509x1080.jpg"
-                     style="min-height: 100%">
+                     style="min-height: 100%;opacity: 1;">
             </div>
             <div class="d-flex col end min-vh-100"
                  style="padding-right:5rem;">
                 <div class="rahmen w-100">
                     <div class="row justify-content-evenly w-100 h-50 top"
-                         style="padding-top: 2em;padding-bottom: 2em;">
+                         style="padding-top: 2em;padding-bottom: 2em;opacity: 0.6;">
                         <div class="rahmen col inline-block rounded-3 shadow-3"
-                             style="padding: 2rem;border: 2px solid darkred;background-color: white;opacity: 0.8;">
+                             style="padding: 2rem;border: 2px solid darkred;background-color: white;opacity: 0.6;">
                             <div class="row">
                                 <div class="col">
                                     <br>
@@ -77,9 +84,9 @@
                         </div>
                     </div>
                     <div class="row justify-content-evenly w-100 h-50 bottom"
-                         style="padding-top: 2em;padding-bottom: 2em;">
+                         style="padding-top: 2em;padding-bottom: 2em;opacity: 0.6;">
                         <div class="rahmen col end inline-block rounded-3 shadow-lg"
-                             style="border: 2px solid darkred;padding: 2rem;background-color:white;opacity: 0.8;">
+                             style="border: 2px solid darkred;padding: 2rem;background-color:white;opacity: 0.6;">
                             <div class="row">
                                 <div class="col">
                                     <br>
