modified: html5/index.html html5/css/styles.css html5/js/scripts.js

--- a/html5/index.html
+++ b/html5/index.html
@@ -61,21 +61,19 @@
                  style="padding-right:10rem;">
                 <div class="rahmen w-100">
                     <div class="row justify-content-evenly w-100 h-50 top"
-                         style="padding-top: 10rem;padding-bottom: 2rem;">
+                         style="padding-top: 8rem;padding-bottom: 4rem;">
                         <div class="rahmen col inline-block rounded-3 shadow-lg"
-                             style="padding: 2rem;border: 2px solid darkred;background-color: white;opacity: 0.8;">
+                             style="padding: 2rem;border: 4px solid red;background-color: white;opacity: 0.8;">
                             <div class="row">
                                 <div class="col">
-                                    <br>
-                                    <h2 class="bold ms-auto">Beteilige Dich an der
-                                        <span class="ostrale" style="">O</span>23
-                                        Umfrage!
+                                    <h2 class="bold ms-auto">Nimm teil an der Umfrage zur Biennale <span class="ostrale"
+                                                                                                         style="">O</span>23!
                                     </h2>
                                     <br>
                                 </div>
-                                <div class="row align-items-start align-bottom">
-                                    <div class="d-flex col align-items-start me-auto">
-                                        <a class="btn btn-lg btn-danger btn-xxl text-white display-5 rounded-3 me-auto rounded-bottom shadow"
+                                <div class="row align-items-center align-bottom">
+                                    <div class="d-flex col align-items-center">
+                                        <a class="btn btn-lg btn-danger btn-xxl text-white display-3 rounded-3 shadow"
                                            data-bs-toggle="modal" data-bs-target="#my-modal" data-language="de"
                                            role="button" id="BtnDE" onclick="call_startSurvey('de');">Starte Umfrage</a>
                                     </div>
@@ -84,20 +82,19 @@
                         </div>
                     </div>
                     <div class="row justify-content-evenly w-100 h-50 bottom"
-                         style="padding-top: 2rem;padding-bottom: 10rem;">
+                         style="padding-top: 3rem;padding-bottom: 8rem;">
                         <div class="rahmen col end inline-block rounded-3 shadow-lg"
-                             style="border: 2px solid darkred;padding: 2rem;background-color:white;opacity: 0.8;">
+                             style="border: 4px solid red;padding: 2rem;background-color:white;opacity: 0.8;">
                             <div class="row">
                                 <div class="col">
-                                    <br>
                                     <h2 class="bold ms-auto">Take part in the survey about the biennial <span
                                             class="ostrale" style="">O</span>23!
                                     </h2>
                                     <br>
                                 </div>
-                                <div class="row align-items-end align-bottom">
-                                    <div class="d-flex col align-items-end me-auto">
-                                        <a class="btn btn-danger btn-lg btn-xxl shadow text-white display-5 rounded-3 ms-auto rounded-bottom"
+                                <div class="row align-items-center align-bottom">
+                                    <div class="d-flex col align-items-center">
+                                        <a class="btn btn-danger btn-lg btn-xxl shadow text-white display-3 rounded-3"
                                            data-bs-toggle="modal" data-bs-target="#my-modal" data-language="en"
                                            role="button" id="BtnEN" onclick="call_startSurvey('en');">Start the
                                             survey</a>
