modified: html5/index.html html5/css/styles.css html5/js/scripts.js

--- a/html5/index.html
+++ b/html5/index.html
@@ -63,13 +63,17 @@
                     <div class="row justify-content-evenly w-100 h-50 top"
                          style="padding-top: 8rem;padding-bottom: 4rem;">
                         <div class="rahmen col inline-block rounded-3 shadow-lg"
-                             style="padding: 2rem;border: 4px solid red;background-color: white;opacity: 0.8;">
+                             style="padding: 2rem;border: 3px solid red;border-radius:2rem;background-color: white;opacity: 0.8;">
                             <div class="row">
-                                <div class="col">
+                                <div class="col-6 start">
                                     <h2 class="bold ms-auto">Nimm teil an der Umfrage zur Biennale <span class="ostrale"
                                                                                                          style="">O</span>23!
                                     </h2>
                                     <br>
+                                </div>
+                                <div class="col-6 end"
+                                     style="background-image: url('./images/slider/slide01-abben_580x581px.png');background-repeat: no-repeat;background-position: center;background-size: contain;">
+
                                 </div>
                                 <div class="row align-items-center align-bottom">
                                     <div class="d-flex col align-items-center">
@@ -84,9 +88,13 @@
                     <div class="row justify-content-evenly w-100 h-50 bottom"
                          style="padding-top: 3rem;padding-bottom: 8rem;">
                         <div class="rahmen col end inline-block rounded-3 shadow-lg"
-                             style="border: 4px solid red;padding: 2rem;background-color:white;opacity: 0.8;">
+                             style="border: 3px solid red;border-radius:2rem; padding: 2rem;background-color:white;opacity: 0.8;">
                             <div class="row">
-                                <div class="col">
+                                <div class="col-6 start"
+                                     style="background-image: url('./images/slider/slide04-wesley_580x581px.png');background-repeat: no-repeat;background-position: center;background-size: contain;">
+
+                                </div>
+                                <div class="col-6">
                                     <h2 class="bold ms-auto">Take part in the survey about the biennial <span
                                             class="ostrale" style="">O</span>23!
                                     </h2>
