modified: html5/index.html html5/css/styles.css html5/js/scripts.js

--- a/html5/index.html
+++ b/html5/index.html
@@ -65,18 +65,17 @@
                         <div class="rahmen col inline-block rounded-3 shadow-lg"
                              style="padding: 2rem;border: 3px solid red;border-radius:2rem;background-color: white;opacity: 0.8;">
                             <div class="row">
-                                <div class="col-6 start">
+                                <div class="col-12 start">
                                     <h2 class="bold ms-auto">Nimm teil an der Umfrage zur Biennale <span class="ostrale"
                                                                                                          style="">O</span>23!
                                     </h2>
-                                    <br>
                                 </div>
-                                <div class="col-6 end"
-                                     style="background-image: url('./images/slider/slide01-abben_580x581px.png');background-repeat: no-repeat;background-position: center;background-size: contain;">
+                                <div class="col-6 offset-6 end"
+                                     style="background-image: url('./images/slider/slide01-abben_580x581px.png');background-repeat: no-repeat;background-position: center;background-size: cover;">
 
                                 </div>
                                 <div class="row align-items-center align-bottom">
-                                    <div class="d-flex col align-items-center">
+                                    <div class="col align-items-center">
                                         <a class="btn btn-lg btn-danger btn-xxl text-white display-3 rounded-3 shadow"
                                            data-bs-toggle="modal" data-bs-target="#my-modal" data-language="de"
                                            role="button" id="BtnDE" onclick="call_startSurvey('de');">Starte Umfrage</a>
@@ -90,18 +89,19 @@
                         <div class="rahmen col end inline-block rounded-3 shadow-lg"
                              style="border: 3px solid red;border-radius:2rem; padding: 2rem;background-color:white;opacity: 0.8;">
                             <div class="row">
-                                <div class="col-6 start"
-                                     style="background-image: url('./images/slider/slide04-wesley_580x581px.png');background-repeat: no-repeat;background-position: center;background-size: contain;">
 
-                                </div>
-                                <div class="col-6">
+                                <div class="col-12">
                                     <h2 class="bold ms-auto">Take part in the survey about the biennial <span
                                             class="ostrale" style="">O</span>23!
                                     </h2>
-                                    <br>
                                 </div>
-                                <div class="row align-items-center align-bottom">
-                                    <div class="d-flex col align-items-center">
+                                <div class="col-6 start"
+                                     style="background-image: url('./images/slider/slide04-wesley_580x581px.png');background-repeat: no-repeat;background-position: center;background-size: cover;">
+
+                                </div>
+                                <div class="col-6"></div>
+                                <div class="row align-items-center bottom">
+                                    <div class="col align-items-center">
                                         <a class="btn btn-danger btn-lg btn-xxl shadow text-white display-3 rounded-3"
                                            data-bs-toggle="modal" data-bs-target="#my-modal" data-language="en"
                                            role="button" id="BtnEN" onclick="call_startSurvey('en');">Start the
