modified: html5/index.html html5/css/styles.css html5/js/scripts.js

--- a/html5/index.html
+++ b/html5/index.html
@@ -70,16 +70,16 @@
                                                                                                          style="">O</span>23!
                                     </h2>
                                 </div>
-                                <div class="col-6 offset-6 end"
+                                <div class="col-6 offset-6"
                                      style="background-image: url('./images/slider/slide01-abben_580x581px.png');background-repeat: no-repeat;background-position: center;background-size: cover;">
 
                                 </div>
-                                <div class="row align-items-center align-bottom">
-                                    <div class="col align-items-center">
-                                        <a class="btn btn-lg btn-danger btn-xxl text-white display-3 rounded-3 shadow"
-                                           data-bs-toggle="modal" data-bs-target="#my-modal" data-language="de"
-                                           role="button" id="BtnDE" onclick="call_startSurvey('de');">Starte Umfrage</a>
-                                    </div>
+                            </div>
+                            <div class="d-flex row align-bottom">
+                                <div class="col align-items-center">
+                                    <a class="btn btn-lg btn-danger btn-xxl text-white display-3 rounded-3 shadow-lg"
+                                       data-bs-toggle="modal" data-bs-target="#my-modal" data-language="de"
+                                       role="button" id="BtnDE" onclick="call_startSurvey('de');">Starte Umfrage</a>
                                 </div>
                             </div>
                         </div>
@@ -100,9 +100,9 @@
 
                                 </div>
                                 <div class="col-6"></div>
-                                <div class="row align-items-center bottom">
+                                <div class="d-flex row align-bottom">
                                     <div class="col align-items-center">
-                                        <a class="btn btn-danger btn-lg btn-xxl shadow text-white display-3 rounded-3"
+                                        <a class="btn btn-danger btn-lg btn-xxl shadow-lg text-white display-3 rounded-3"
                                            data-bs-toggle="modal" data-bs-target="#my-modal" data-language="en"
                                            role="button" id="BtnEN" onclick="call_startSurvey('en');">Start the
                                             survey</a>
