modified: html5/index.html html5/css/styles.css html5/js/scripts.js

--- a/html5/index.html
+++ b/html5/index.html
@@ -73,11 +73,9 @@
                                 </div>
                                 <div class="h-50 d-inline-block col-6 offset-6"
                                      style="background-image: url('./images/slider/slide01-abben_580x581px.png');background-repeat: no-repeat;background-position: center;background-size: cover;">
-
                                 </div>
-
-                                <div class="h-25 d-inline-block col align-items-end">
-                                    <div class="">
+                                <div class="position-relative">
+                                    <div class="h-25 d-inline-block position-absolute bottom-0 start-50 translate-middle-x">
                                         <a class="btn btn-lg btn-danger btn-xxl text-white display-3 rounded-3 shadow-lg"
                                            data-bs-toggle="modal" data-bs-target="#my-modal" data-language="de"
                                            role="button" id="BtnDE" onclick="call_startSurvey('de');">Starte Umfrage</a>
@@ -102,9 +100,8 @@
 
                                 </div>
 
-
-                                <div class="h-25 d-inline-block col align-items-end">
-                                    <div class="">
+                                <div class="position-relative">
+                                    <div class="h-25 d-inline-block position-absolute bottom-0 start-50 translate-middle-x">
                                         <a class="btn btn-danger btn-lg btn-xxl shadow-lg text-white display-3 rounded-3"
                                            data-bs-toggle="modal" data-bs-target="#my-modal" data-language="en"
                                            role="button" id="BtnEN" onclick="call_startSurvey('en');">Start the
