--- a/html5/index.html
+++ b/html5/index.html
@@ -58,10 +58,10 @@
                      style="min-height: 100%;background-color:black;opacity: 1;">-->
             </div>
             <div class="d-flex col end min-vh-100"
-                 style="padding-right:10rem;">
+                 style="padding-right:5%;">
                 <div class="rahmen w-100">
                     <div class="row justify-content-evenly w-100 h-50 top"
-                         style="padding-top: 8rem;padding-bottom: 4rem;">
+                         style="padding-top: 4%;padding-bottom: 2%;">
                         <div class="rahmen col inline-block rounded-3 shadow-lg"
                              style="padding: 2rem;border: 3px solid red;border-radius:2rem;background-color: white;opacity: 0.8;">
                             <div class="row">
@@ -72,7 +72,7 @@
                                     </h2>
                                 </div>
                                 <div class="h-50 d-inline-block col-6 offset-6"
-                                     style="background-image: url('./images/slider/slide01-abben_580x581px.png');background-repeat: no-repeat;background-position: center;background-size: cover;">
+                                     style="background-image: url('./images/slider/slide01-abben_580x581px.png');background-repeat: no-repeat;background-position: center;background-size: cover;min-height: 35%;">
                                 </div>
                                 <div class="position-relative">
                                     <div class="h-25 d-inline-block position-absolute bottom-0 start-50 translate-middle-x">
@@ -85,7 +85,7 @@
                         </div>
                     </div>
                     <div class="row justify-content-evenly w-100 h-50 bottom"
-                         style="padding-top: 3rem;padding-bottom: 8rem;">
+                         style="padding-top: 2%;padding-bottom: 4%;">
                         <div class="rahmen col end inline-block rounded-3 shadow-lg"
                              style="border: 3px solid red;border-radius:2rem; padding: 2rem;background-color:white;opacity: 0.8;">
                             <div class="row">
@@ -96,7 +96,7 @@
                                     </h2>
                                 </div>
                                 <div class="h-50 d-inline-block col-6 start"
-                                     style="background-image: url('./images/slider/slide04-wesley_580x581px.png');background-repeat: no-repeat;background-position: center;background-size: cover;">
+                                     style="background-image: url('./images/slider/slide04-wesley_580x581px.png');background-repeat: no-repeat;background-position: center;background-size: cover;min-height: 35%;">
 
                                 </div>
 
