modified: html5/index.html html5/css/styles.css html5/js/scripts.js

--- a/html5/index.html
+++ b/html5/index.html
@@ -72,7 +72,11 @@
                                     </h2>
                                 </div>
                                 <div class="h-50 d-inline-block col-6 offset-6"
-                                     style="background-image: url('./images/slider/slide01-abben_580x581px.png');background-repeat: no-repeat;background-position: center;background-size: cover;min-height: 35%;">
+                                     style="background-image: url('./images/slider/slide01-abben_580x581px.png');
+                                     background-repeat: no-repeat;background-position: center;
+                                     background-size: contain;
+                                     min-height: 260px;
+                                     height: 35%;">
                                 </div>
                                 <div class="position-relative">
                                     <div class="h-25 d-inline-block position-absolute bottom-0 start-50 translate-middle-x">
@@ -96,7 +100,11 @@
                                     </h2>
                                 </div>
                                 <div class="h-50 d-inline-block col-6 start"
-                                     style="background-image: url('./images/slider/slide04-wesley_580x581px.png');background-repeat: no-repeat;background-position: center;background-size: cover;min-height: 35%;">
+                                     style="background-image: url('./images/slider/slide04-wesley_580x581px.png');
+                                     background-repeat: no-repeat;background-position: center;
+                                     background-size: contain;
+                                     min-height: 260px;
+                                     height: 35%;">
 
                                 </div>
 
