modified: html5/index.html html5/css/styles.css html5/js/scripts.js

--- a/html5/index.html
+++ b/html5/index.html
@@ -71,7 +71,7 @@
                                             style="">O</span>23!
                                     </h2>
                                 </div>
-                                <div class="h-50 d-inline-block col-6 offset-6"
+                                <div class="h-50 d-inline-block col"
                                      style="background-image: url('./images/slider/slide01-abben_580x581px.png');
                                      background-repeat: no-repeat;background-position: center;
                                      background-size: contain;
@@ -99,7 +99,7 @@
                                             class="ostrale" style="">O</span>23!
                                     </h2>
                                 </div>
-                                <div class="h-50 d-inline-block col-6 start"
+                                <div class="h-50 d-inline-block col"
                                      style="background-image: url('./images/slider/slide04-wesley_580x581px.png');
                                      background-repeat: no-repeat;background-position: center;
                                      background-size: contain;
