modified: html5/index.html html5/css/styles.css html5/js/scripts.js

--- a/html5/index.html
+++ b/html5/index.html
@@ -78,7 +78,7 @@
                                      min-height: 260px;
                                      height: 35%;">
                                 </div>
-                                <div class="position-relative">
+                                <div class="position-relative" style="margin-top: 5%">
                                     <div class="h-25 d-inline-block position-absolute bottom-0 start-50 translate-middle-x">
                                         <a class="btn btn-lg btn-danger btn-xxl text-white display-3 rounded-3 shadow-lg"
                                            data-bs-toggle="modal" data-bs-target="#my-modal" data-language="de"
@@ -108,8 +108,8 @@
 
                                 </div>
 
-                                <div class="position-relative">
-                                    <div class="h-25 d-inline-block position-absolute bottom-0 start-50 translate-middle-x">
+                                <div class="position-relative" style="margin-top: 5%">
+                                    <div class="h-25 d-inline-block position-absolute bottom-50 start-50 translate-middle-x">
                                         <a class="btn btn-danger btn-lg btn-xxl shadow-lg text-white display-3 rounded-3"
                                            data-bs-toggle="modal" data-bs-target="#my-modal" data-language="en"
                                            role="button" id="BtnEN" onclick="call_startSurvey('en');">Start the
