modified: html5/index.html html5/css/styles.css html5/js/scripts.js

--- a/html5/index.html
+++ b/html5/index.html
@@ -63,7 +63,7 @@
                     <div class="row justify-content-evenly w-100 h-50 top"
                          style="padding-top: 6%;padding-bottom: 3%;">
                         <div class="rahmen col inline-block rounded-3 shadow-lg"
-                             style="padding: 2rem;border: 3px solid red;border-radius:4rem;background-color: lightgrey;opacity: 0.8;">
+                             style="padding: 2rem;border: 3px solid red;border-radius:4rem;background-color: #f3f3f3;opacity: 0.8;">
                             <div class="row">
                                 <div class="h-25 d-inline-block col-12 start">
                                     <h2 class="bold text-center">Nimm teil an der Umfrage zur Biennale <span
@@ -91,7 +91,7 @@
                     <div class="row justify-content-evenly w-100 h-50 bottom"
                          style="padding-top: 3%;padding-bottom: 6%;">
                         <div class="rahmen col end inline-block rounded-3 shadow-lg"
-                             style="border: 3px solid red;border-radius:2rem; padding: 2rem;background-color:lightgray;opacity: 0.8;">
+                             style="border: 3px solid red;border-radius:2rem; padding: 2rem;background-color:#f3f3f3;opacity: 0.8;">
                             <div class="row">
 
                                 <div class="h-25 d-inline-block col-12">
