--- a/html5/index.html
+++ b/html5/index.html
@@ -93,8 +93,8 @@
                         <div class="rahmen col end inline-block rounded-3 shadow-lg"
                              style="border: 3px solid red;border-radius:2rem; padding: 2rem;background-color:#f3f3f3;opacity: 0.8;">
                             <div class="row">
-                                <div class="position-relative" style="margin-top: 5%">
-                                    <div class="h-25 d-inline-block position-absolute top-0 start-50 translate-middle-x">
+                                <div class="position-relative">
+                                    <div class="h-25 d-inline-block position-absolute top-25 start-50 translate-middle-x">
                                         <a class="btn btn-danger btn-lg btn-xxl shadow-lg text-white display-3 rounded-3"
                                            data-bs-toggle="modal" data-bs-target="#my-modal" data-language="en"
                                            role="button" id="BtnEN" onclick="call_startSurvey('en');">Start the
@@ -109,7 +109,7 @@
                                      height: 35%;">
 
                                 </div>
-                                <div class="h-25 d-inline-block col-12">
+                                <div class="h-25 d-inline-block col-12" style="margin-top: 5%">
                                     <h2 class="bold text-center">Take part in the survey about the biennial <span
                                             class="ostrale" style="">O</span>23!
                                     </h2>
