modified: html5/index.html html5/css/styles.css html5/js/scripts.js

--- a/html5/index.html
+++ b/html5/index.html
@@ -76,10 +76,11 @@
                                      background-repeat: no-repeat;background-position: center;
                                      background-size: contain;
                                      min-height: 260px;
-                                     height: 35%;">
+                                     height: 35%;
+                                     margin-top: 3%;">
                                 </div>
-                                <div class="position-relative" style="margin-top: 5%">
-                                    <div class="h-25 d-inline-block position-absolute bottom-0 start-50 translate-middle-x">
+                                <div class="h-25 col position-relative" style="margin-top: 5%">
+                                    <div class="d-inline-block position-absolute bottom-0 start-50 translate-middle-x">
                                         <a class="btn btn-lg btn-danger btn-xxl text-white display-3 rounded-3 shadow-lg"
                                            data-bs-toggle="modal" data-bs-target="#my-modal" data-language="de"
                                            role="button" id="BtnDE" onclick="call_startSurvey('de');">Starte Umfrage</a>
@@ -93,27 +94,29 @@
                         <div class="rahmen col end inline-block rounded-3 shadow-lg"
                              style="border: 3px solid red;border-radius:2rem; padding: 2rem;background-color:#f3f3f3;opacity: 0.8;">
                             <div class="row">
-                                <div class="position-relative">
-                                    <div class="h-25 d-inline-block position-absolute top-25 start-50 translate-middle-x">
-                                        <a class="btn btn-danger btn-lg btn-xxl shadow-lg text-white display-3 rounded-3"
-                                           data-bs-toggle="modal" data-bs-target="#my-modal" data-language="en"
-                                           role="button" id="BtnEN" onclick="call_startSurvey('en');">Start the
-                                            survey</a>
-                                    </div>
+                                <div class="h-25 d-inline-block col-12" style="margin-top: 5%">
+                                    <h2 class="bold text-center">Take part in the survey about the biennial <span
+                                            class="ostrale" style="">O</span>23!
+                                    </h2>
                                 </div>
                                 <div class="h-50 d-inline-block col"
                                      style="background-image: url('./images/slider/slide04-wesley_580x581px.png');
                                      background-repeat: no-repeat;background-position: center;
                                      background-size: contain;
                                      min-height: 260px;
-                                     height: 35%;">
+                                     height: 35%;
+                                     margin-top: 3%;">
 
                                 </div>
-                                <div class="h-25 d-inline-block col-12" style="margin-top: 5%">
-                                    <h2 class="bold text-center">Take part in the survey about the biennial <span
-                                            class="ostrale" style="">O</span>23!
-                                    </h2>
+                                <div class="h-25 col position-relative">
+                                    <div class="d-inline-block position-absolute bottom-0 start-50 translate-middle-x">
+                                        <a class="btn btn-danger btn-lg btn-xxl shadow-lg text-white display-3 rounded-3"
+                                           data-bs-toggle="modal" data-bs-target="#my-modal" data-language="en"
+                                           role="button" id="BtnEN" onclick="call_startSurvey('en');">Start the
+                                            survey</a>
+                                    </div>
                                 </div>
+
                             </div>
                         </div>
                     </div>
